--- a/views/layouts/createWorkoutLog.handlebars
+++ b/views/layouts/createWorkoutLog.handlebars
@@ -56,7 +56,7 @@
         <div class="form-group row">
           <label for="inputDate" class="col-sm-4 col-form-label">Date of workout</label>
           <div class="col-sm-8">
-            <input id="inputDate" name="inputDate" type="datetime-local" class="form-control" required>
+            <input id="inputDate" name="inputDate" type="datetime-local" max="2050-12-31" class="form-control" required>
             <div class="invalid-feedback">
               Workout date must be provided
             </div>
